--- a/src/index.css
+++ b/src/index.css
@@ -31,5 +31,8 @@ body {
   max-height: 100vh;
   overflow: auto;
   margin: 0;
-  background-color: #ffe8d6;
+  background-color: #140120;
+  color: rgb(255, 227, 203);
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
