--- a/src/components/BackLink/BackLink.module.css
+++ b/src/components/BackLink/BackLink.module.css
@@ -1,5 +1,9 @@
 .backBtn {
+  display: block;
   padding: 8px;
   border: 1px solid white;
   border-radius: 50px;
+  margin-bottom: 30px;
+  width: 65px;
+  margin-left: 12px;
 }
