--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -1,8 +1,11 @@
 .mainContainer {
   display: flex;
+  flex-wrap: wrap;
   margin-bottom: 30px;
   column-gap: 20px;
-  padding-left: 40px;
+  row-gap: 20px;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 .mainList {
@@ -19,6 +22,8 @@
   border: 1px solid black;
 }
 .picture {
+  min-width: 220px;
+  min-height: 360px;
   width: 300px;
   height: 440px;
   border-radius: 20px;
@@ -52,6 +57,4 @@
 
 .additionaListItem:hover {
   color: rgb(247, 211, 165);
-}
-.additionalListsCont {
 }
