--- a/src/components/MovieCast/MovieCast.module.css
+++ b/src/components/MovieCast/MovieCast.module.css
@@ -10,11 +10,13 @@
 
 .castListItem {
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
-  width: 370px;
+  min-width: 270px;
 }
 .castListImg {
   width: 200px;
+  min-width: 120px;
   height: 300px;
   border: 1px solid rgb(46, 0, 105);
   border-radius: 10px;
@@ -23,4 +25,5 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  max-width: 150px;
 }
