--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,15 +1,27 @@
 .nav {
   display: flex;
-  align-items: stretch;
+  align-items: center;
+  justify-content: space-between;
   border-bottom: 1px solid white;
-  padding: 20px 0 20px 0;
+  padding: 18px 0 18px 0;
   margin-bottom: 40px;
   position: sticky;
   top: 0;
   left: 0;
-  column-gap: 45px;
   background-color: #220335;
   background-image: linear-gradient(to bottom right, #000000, #351255, #8909d7);
+}
+.navLinks:after {
+  box-shadow: 80vw 14vh 0.2vmin #fff, 88vw 18vh 0.1vmin #fff,
+    77vw 11vh 0.2vmin #fff, 2vw 6vh 0.1vmin #fff, 12vw 16vh 0.2vmin #fff,
+    85vw 22vh 0.1vmin #fff, 91vw 14vh 0.2vmin #fff, 98vw 15vh 0.1vmin #fff,
+    94vw 29vh 0.2vmin #fff, 29vw 19vh 0.1vmin #fff, 94vw 12vh 0.1vmin #fff,
+    30vw 6vh 0.2vmin #fff, 15vw 1vh 0.1vmin #fff, 12vw 16vh 0.1vmin #fff,
+    69vw 11vh 0.2vmin #fff, 79vw 5vh 0.2vmin #fff, 89vw 5vh 0.2vmin #fff,
+    69vw 2vh 0.2vmin #fff, 24vw 21vh 0.1vmin #fff, 23vw 17vh 0.2vmin #fff,
+    14vw 20vh 0.2vmin #fff, 5vw 29vh 0.2vmin #fff, 75vw 29vh 0.2vmin #fff,
+    76vw 23vh 0.2vmin #fff, 7vw 14vh 0.2vmin #fff, 65vw 8vh 0.2vmin #fff,
+    66vw 21vh 0.1vmin #fff;
 }
 
 .navIcon {
@@ -18,9 +30,19 @@
   height: 40px;
   color: #fff;
 }
+.navLinks {
+  display: flex;
+  align-items: stretch;
+  column-gap: 45px;
+}
 .navIconSearch {
   width: 30px;
   height: 30px;
+  margin-right: 30px;
+  transition: color 0.5s linear;
+}
+.navIconSearch:hover {
+  color: rgb(224, 196, 169);
 }
 .link {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -30,6 +52,7 @@
   color: #fff;
   position: relative;
   height: 30px;
+  transition: color 0.5s ease;
 }
 .link:last-child {
   display: flex;
@@ -45,18 +68,36 @@
 .active:after {
   content: "";
   position: absolute;
-  bottom: -12px;
+  bottom: -10px;
   left: 0;
   width: 100%;
   height: 2px;
   background-color: rgb(224, 196, 169);
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 425px) {
   .nav {
     column-gap: 20px;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    padding: 12px 0 12px 0;
   }
   .navIcon {
     margin-left: 10px;
+  }
+  .link {
+    font-size: 18px;
+  }
+  .active:after {
+    bottom: 3px;
+  }
+  .navIcon {
+    width: 30px;
+    height: 30px;
+  }
+  .navLinks {
+    gap: 20px;
+    align-items: center;
+  }
+  .navIconSearch {
+    margin-right: 10px;
   }
 }
