--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body {
   max-height: 100vh;
   overflow: auto;
   margin: 0;
-  background-color: #140120;
+  background-color: #0c0013;
   color: rgb(255, 227, 203);
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
