--- a/src/components/BackLink/BackLink.module.css
+++ b/src/components/BackLink/BackLink.module.css
@@ -1,9 +1,20 @@
 .backBtn {
-  display: block;
-  padding: 8px;
-  border: 1px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgb(46, 0, 105);
   border-radius: 50px;
   margin-bottom: 30px;
-  width: 65px;
   margin-left: 12px;
+  width: 70px;
+  height: 30px;
+  padding: 6px;
+  background-color: rgb(79, 41, 112);
+  color: white;
+  font-size: 18px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  transition: background-color 0.5s ease;
+}
+.backBtn:hover {
+  background-color: rgb(97, 65, 141);
 }
