--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -95,7 +95,7 @@
   background: #fff;
   border-radius: 50%;
   top: 35vh;
-  left: 80vw;
+  left: 65vw;
   box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.1),
     0 0 0 8px rgba(255, 255, 255, 0.1), 0 0 20px rgba(255, 255, 255, 1);
   animation: animate2 4s ease-in-out infinite;
@@ -114,7 +114,7 @@
 @keyframes animate2 {
   0% {
     transform: rotate(295deg) translateX(0);
-    opacity: 0;
+    opacity: 1;
   }
   20% {
     opacity: 1;
@@ -182,6 +182,15 @@
 }
 
 @media screen and (max-width: 425px) {
+  .shootingStar1:before {
+    width: 110px;
+  }
+  .shootingStar2:before {
+    width: 110px;
+  }
+  .shootingStar3:before {
+    width: 110px;
+  }
   .stars:after {
     box-shadow: 80vw 24vh 0.2vmin #fff, 88vw 28vh 0.1vmin #fff,
       77vw 21vh 0.4vmin #fff, 2vw 16vh 0.3vmin #fff, 12vw 26vh 0.3vmin #fff,
