--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -91,3 +91,46 @@
   height: 18px;
   color: #bfa9ff;
 }
+
+.mainContPoster {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 95vw;
+  height: 75vh;
+  margin: 0 auto;
+}
+.pictureDrop {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 374px) {
+  .picture {
+    height: 360px;
+  }
+  .mainContPoster {
+    width: 95vw;
+    height: 25vh;
+  }
+}
+@media screen and (max-width: 768px) and (min-width: 374px) {
+  .mainContPoster {
+    height: 30vh;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mainContPoster {
+    height: 50vh;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .mainContPoster {
+    height: 70vh;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .mainContPoster {
+    height: 90vh;
+  }
+}
