--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -2,30 +2,34 @@
   display: flex;
   flex-wrap: wrap;
   margin: 40px auto 20px auto;
-  width: 95vw;
-  column-gap: 12px;
-  row-gap: 12px;
+  width: 70vw;
+  column-gap: 40px;
+  row-gap: 30px;
   align-items: center;
   justify-content: center;
 }
 .listItem {
-  width: 320px;
-  height: 220px;
+  width: 240px;
+  height: 380px;
 }
 
 .imgCont {
-  max-width: 300px;
   padding-bottom: 8px;
 }
 .listItemImg {
   width: 100%;
   height: 100%;
-  max-height: 180px;
+  width: 230px;
+  height: 320px;
   border: 2px solid white;
+  transition: box-shadow 0.4s ease-out;
 }
 .listItemImg:hover {
   cursor: pointer;
   box-shadow: 0 0 15px rgba(255, 255, 255, 0.9);
+}
+.listText {
+  max-width: 220px;
 }
 .listText:hover {
   color: rgb(247, 211, 165);
