--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -112,10 +112,12 @@
   max-width: 100vw;
   margin: 0 auto;
   border-top: 1px solid white;
+  position: relative;
 }
 .pictureDrop {
   width: 100%;
   height: 100%;
+  filter: brightness(0.5);
 }
 
 @media screen and (max-width: 374px) {
