--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -16,7 +16,7 @@
   border: none;
   width: 250px;
   height: 35px;
-  padding: 0;
+  padding: 0 0 0 12px;
   border: none;
   outline: none;
 }
@@ -53,7 +53,7 @@
     border: none;
     width: 180px;
     height: 30px;
-    padding: 0;
+    padding: 0 0 0 8px;
     border: none;
     outline: none;
   }
