--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,10 +1,66 @@
 .mainFooterCont {
+  margin-top: 20px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 18px 0 18px 0;
+  justify-content: flex-end;
   bottom: 0;
   left: 0;
   right: 0;
   background-color: #000;
+}
+.footerIcon {
+  width: 40px;
+  height: 40px;
+  color: #ebe4ff;
+  transition: color 300ms ease-out;
+}
+.footerIcon:hover {
+  color: #b298fa;
+}
+.footerText {
+  color: #ebe4ff;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.footerBefore {
+  position: relative;
+}
+.footerBefore::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 2px;
+  height: 50px;
+  background-color: #fff;
+}
+@media screen and (max-width: 375px) {
+  .mainFooterCont {
+    padding: 18px 12px 18px 120px;
+    height: 30px;
+  }
+  .footerText {
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 375px) {
+  .mainFooterCont {
+    padding: 18px 12px 18px 175px;
+    height: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mainFooterCont {
+    padding: 18px 30px 18px 175px;
+    height: 40px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .mainFooterCont {
+    padding: 18px 200px 18px 40px;
+    height: 50px;
+  }
 }
