--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -18,6 +18,13 @@
   width: 40px;
   height: 40px;
   color: #fff;
+  transition: color 300ms ease-out, animation;
+  animation: bounce-top 1.5s both;
+  cursor: pointer;
+}
+.navIcon:hover {
+  animation: vibrate-1 1s linear infinite both;
+  color: #bcb0c4;
 }
 .navLinks {
   display: flex;
@@ -29,10 +36,13 @@
   height: 30px;
   color: #fff;
   margin-right: 30px;
-  transition: color 0.5s linear;
+  transition: color 0.5s linear, width 0.3s ease-out, height 0.3s ease-out;
 }
 .navIconSearch:hover {
   color: rgb(224, 196, 169);
+  animation: vibrate-1 1.2s linear infinite both;
+  width: 35px;
+  height: 35px;
 }
 .link {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -66,6 +76,7 @@
 }
 @media screen and (max-width: 425px) {
   .nav {
+    height: 30px;
     column-gap: 20px;
     justify-content: space-between;
     padding: 12px 0 12px 0;
@@ -89,5 +100,91 @@
   }
   .navIconSearch {
     margin-right: 10px;
+    width: 25px;
+    height: 25px;
+  }
+  .navIconSearch:hover {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+@keyframes bounce-top {
+  0% {
+    -webkit-transform: translateY(-45px);
+    transform: translateY(-45px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 1;
+  }
+  24% {
+    opacity: 1;
+  }
+  40% {
+    -webkit-transform: translateY(-24px);
+    transform: translateY(-24px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  65% {
+    -webkit-transform: translateY(-12px);
+    transform: translateY(-12px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  82% {
+    -webkit-transform: translateY(-6px);
+    transform: translateY(-6px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  93% {
+    -webkit-transform: translateY(-4px);
+    transform: translateY(-4px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  25%,
+  55%,
+  75%,
+  87% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+}
+
+@keyframes vibrate-1 {
+  0% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+  20% {
+    -webkit-transform: translate(-2px, 2px);
+    transform: translate(-2px, 2px);
+  }
+  40% {
+    -webkit-transform: translate(-2px, -2px);
+    transform: translate(-2px, -2px);
+  }
+  60% {
+    -webkit-transform: translate(2px, 2px);
+    transform: translate(2px, 2px);
+  }
+  80% {
+    -webkit-transform: translate(2px, -2px);
+    transform: translate(2px, -2px);
+  }
+  100% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
   }
 }
