--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -122,6 +122,7 @@
 
 @media screen and (max-width: 374px) {
   .picture {
+    width: 220px;
     height: 360px;
   }
   .mainContPoster {
@@ -129,6 +130,9 @@
   }
 }
 @media screen and (max-width: 768px) and (min-width: 374px) {
+  .picture {
+    width: 280px;
+  }
   .mainContPoster {
     height: 240px;
   }
