--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -24,7 +24,7 @@
 }
 .navIcon:hover {
   animation: vibrate-1 1s linear infinite both;
-  color: #bcb0c4;
+  color: #a88bbb;
 }
 .navLinks {
   display: flex;
@@ -39,7 +39,7 @@
   transition: color 0.5s linear, width 0.3s ease-out, height 0.3s ease-out;
 }
 .navIconSearch:hover {
-  color: #bcb0c4;
+  color: rgb(224, 196, 169);
   animation: vibrate-1 1.2s linear infinite both;
   width: 35px;
   height: 35px;
